launchdtt, version.json: Fixed the dttupdater path given to ProcessBuilder.
And also fixed the order in which the Launcher runs dttupdater before closing itself.

The \n character was used as the end-of-line character in the notes variable value in the version.json file.

The Launcher can display the note text as multilinear when indicating an update.